force-app/main/default/objects/Utility_Products__c/Utility_Products__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Product Id which get used as not products ( ie Freight, Discount ... )</description>
    <label>Utility Products</label>
</CustomObject>