force-app/main/default/objects/Utility_Products__c/fields/Backorder_Credit__c.field-meta.xml
<CustomField>
    <fullName>Backorder_Credit__c</fullName>
    <description>The Id of the product used to offset the cost of back ordered parts</description>
    <externalId>true</externalId>
    <label>Back Order Credit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>