force-app/main/default/objects/Utility_Products__c/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <description>Product used for charging random Freight</description>
    <externalId>true</externalId>
    <label>Freight</label>
    <length>18</length>
    <type>Text</type>
</CustomField>