force-app/main/default/objects/Utility_Products__c/fields/Partner_Custom_Product__c.field-meta.xml
<CustomField>
    <fullName>Partner_Custom_Product__c</fullName>
    <description>The product Id for the custom partner product which partners us in CPQ</description>
    <label>Partner Custom Product</label>
    <length>18</length>
    <type>Text</type>
</CustomField>