force-app/main/default/objects/Utility_Products__c/fields/Partner_Warranty_Labour__c.field-meta.xml
<CustomField>
    <fullName>Partner_Warranty_Labour__c</fullName>
    <description>The Id of the Partner Warranty Labour Product</description>
    <externalId>true</externalId>
    <label>Partner Warranty Labour</label>
    <length>18</length>
    <type>Text</type>
</CustomField>