force-app/main/default/objects/Utility_Products__c/fields/Sublet__c.field-meta.xml
<CustomField>
    <fullName>Sublet__c</fullName>
    <description>Product used to charge sublet costs</description>
    <externalId>true</externalId>
    <label>Sublet</label>
    <length>18</length>
    <type>Text</type>
</CustomField>